--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+body{
+    background-color: #d3d1d4;
+    font-family: 'Poppins', sans-serif;
+}
+.task-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 99vh;
+}
+.first-container{
+    margin-top: 50px;
+    display: flex;
+}
+.first-head{
+    font-size: 18px;
+}
+.first-container input{
+    height: 30px;
+    width: 400px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    font-size: 15px;
+    padding-left: 10px;
+    margin-left: 5px;
+}
+.first-container button{
+    cursor: pointer;
+    margin-left: 5px;
+    height: 33px;
+    width: 180px;
+    border-radius: 5px;
+    font-size: 15px;
+    border: 1px solid grey;
+    background-color: black;
+    color: white;
+}
+.msg-container{
+    color: rgb(11, 153, 11);
+}
+.second-container{
+    background-color: white;
+    text-align: center;
+    overflow-y: scroll;
+    margin-top: 100px;
+    border: 2px solid black;
+    width: 55%;
+    height: 70%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screen and (max-width: 700px){
+    .first-container{
+        flex-direction: column;
+    }
+    .first-head{
+        margin-left: 26px;
+        font-size: 18px;
+    }
+    .first-container input{
+        width: 290px;
+        padding-left: 10px;
+        margin-left: 25px;
+    }
+    .first-container button{
+        margin-top: 10px;
+        margin-left: 85px;
+        font-size: 15px;
+    }
+    .second-container{
+        width: 93%;
+        height: 58%;
+    }
 }
