--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,11 @@ body{
     background-color: black;
     color: white;
 }
+button.disabled {
+  background-color: #ccc; /* Change the background color */
+  color: #888; /* Change the text color */
+  cursor: not-allowed; /* Change the cursor */
+}
 .msg-container{
     color: rgb(11, 153, 11);
 }
